# macdar

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  install.sh  package.sh
ios/: README.md  project.yml
ios/macdar.xcodeproj/: project.pbxproj
ios/macdar.xcodeproj/project.xcworkspace/xcuserdata/drewsny.xcuserdatad/: UserInterfaceState.xcuserstate
ios/macdar.xcodeproj/xcuserdata/drewsny.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/macdar/App/: AppState.swift  macdarApp.swift
ios/macdar/Bridge/: IOSDownloader.mm  RadarEngine.h  RadarEngine.mm  macdar-Bridging-Header.h
ios/macdar/Renderer/: MetalRenderCoordinator.swift
ios/macdar/Resources/: Info.plist
ios/macdar/Views/: ContentView.swift  ProductPickerView.swift  RadarMapView.swift  SettingsView.swift  StationPickerSheet.swift  TiltControlView.swift
src/: app.cpp  app.h  historic.cpp  historic.h  main.cpp  main.mm
src/cuda/: gpu_pipeline.cu  gpu_pipeline.cuh  renderer.cu  renderer.cuh  volume3d.cu  volume3d.cuh
src/metal/: MetalRenderer.h  MetalRenderer.mm  gpu_pipeline.h  gpu_pipeline.metal  metal_common.h  renderer.metal  volume3d.metal
src/net/: aws_nexrad.h  warnings.cpp  warnings.h
src/nexrad/: level2_parser.cpp  level2_parser.h  stations.h  sweep_data.h
src/render/: color_table.cpp  metal_interop.h  metal_interop.mm
src/ui/: ui.cpp  ui.h
